[package]
name = "compliance-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Miden dependencies
miden-client = { version = "0.9" }
miden-objects = { version = "0.9" }
miden-lib = { version = "0.9" }

# Web framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async
futures = "0.3"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Zero-knowledge proofs
rand = "0.8"
